# docker-video-audio-generator-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env-configmap.yaml  openapi.json  pyproject.toml
.github/workflows/: main.yml
kubernetes/: video-creator-namespace.yaml  vidgenapi-deployment.yaml  vidgenapi-service.yaml
src/: api.py  createVideo.py  downloadVideo.py  subtitle.py  video.py  voice.py
