[tool.poetry]
name = "video-audio-generator"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
edge-tts = "^6.1.12"
requests = "^2.32.3"
tqdm = "^4.66.5"
moviepy = "^1.0.3"
pillow = "<10"
faster-whisper = "^1.0.3"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
